update wrap width

--- a/public/src/assets/scss/common/base_list/_com.scss
+++ b/public/src/assets/scss/common/base_list/_com.scss
@@ -17,9 +17,10 @@ body{
   @include respond-to('extraL'){
     width: 960px;
   };
-  @include respond-to('extraL'){
+  @include respond-to('extraXL'){
     width: 1440px;
   };
+  width: 1440px;
   margin: auto;
 }
 
