--- a/public/src/assets/scss/common/base_list/_variables.scss
+++ b/public/src/assets/scss/common/base_list/_variables.scss
@@ -19,5 +19,5 @@ $breakpoints: (
   'medium': 720px,
   'large':  960px,
   'extraL': 1140px,
-  'extraLL': 1920px
+  'extraXL': 1520px,
 ) !default;
