--- a/public/src/assets/scss/pages/board/freeboard.scss
+++ b/public/src/assets/scss/pages/board/freeboard.scss
@@ -6,25 +6,22 @@
 .section__board {
   margin-top: 70px;
 
-  &__title {
-    font-size: $ft_title;
+  &__seq, &__title, &__author, &__date {
+    font-size: $ft_large;
     line-height: 1.3;
+    font-weight: bold;
   }
 
-  &__img {
-    display: block;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: red;
-  }
-
-  &__view {
-    background-color: $light_dark_gray;
-    padding: 25px 30px;
+  &__item {
+    background-color: $light_gray;
+    padding: 25px 44px;
     border-radius: 8px;
     box-sizing: border-box;
     margin: 5px 0;
+  }
+
+  &__box{
+    width: 100%;
   }
 
   &__button_box {
@@ -33,5 +30,18 @@
 
   &__button {
     @include makeButton(true)
+  }
+}
+
+
+.nav__pagination {
+  &__link {
+    @include pagenation_button(18px);
+    vertical-align: sub;
+  }
+
+  &__button {
+    @include pagenation_button(18px);
+
   }
 }
