--- a/views/pages/board/write.ejs
+++ b/views/pages/board/write.ejs
@@ -9,7 +9,7 @@
     <h1 class="write__title">Free Board</h1>
     <div class="section__write">
       <div class="wrap">
-        <form method="post" class="section__write__form" id="writeForm">
+        <form class="section__write__form" id="writeForm">
           <input type="text" class="form-control section__write__title" placeholder="Title">
           <textarea id="summernote" name="contents" class="form-control" form="writeForm"></textarea>
           <div class="d-flex justify-content-end section__write__button_box">
