implement going to previous location after login

--- a/views/pages/auth/signin.ejs
+++ b/views/pages/auth/signin.ejs
@@ -27,7 +27,7 @@
         </div>
       </div>
       <div class="d-flex justify-content-center signin__button_box">
-        <button type="submit" class="btn signin__button-login ">Sign in</button>
+        <button type="submit" class="btn signin__button-login" data-prev="<%= prevUrl %>">Sign in</button>
         <a href="/" class="btn signin__button-cancel ">Home</a>
       </div>
 
