update small style

--- a/public/src/assets/scss/pages/board/freeboard.scss
+++ b/public/src/assets/scss/pages/board/freeboard.scss
@@ -22,6 +22,10 @@
 
   &__box{
     width: 100%;
+    transition: all .2s;
+    &:hover{
+      color: $pointColor_yellow_dark;
+    }
   }
 
   &__button_box {
