add faq, about route

--- a/views/common/components/partial/footer.ejs
+++ b/views/common/components/partial/footer.ejs
@@ -12,13 +12,13 @@
         <!-- Links -->
         <ul class="list-unstyled footer__list text-center">
           <li class="list-inline-item footer__list__item">
-            <a href="" class="ft-white strong">About us</a>
+            <a href="/views/about" class="ft-white strong">About us</a>
           </li>
           <li class="list-inline-item footer__list__item">
             <a href="/board/freeboard" class="ft-white strong">Free Board</a>
           </li>
           <li class="list-inline-item footer__list__item">
-            <a href="" class="ft-white strong">FAQ</a>
+            <a href="/views/faq" class="ft-white strong">FAQ</a>
           </li>
           <li class="list-inline-item footer__list__item">
             <a href="" class="ft-white strong">Contact</a>
