--- a/views/pages/board/write.ejs
+++ b/views/pages/board/write.ejs
@@ -11,7 +11,7 @@
       <div class="wrap">
         <form class="section__write__form" id="writeForm">
           <input type="text" class="form-control section__write__title" placeholder="Title">
-          <textarea id="summernote" name="contents" class="form-control" form="writeForm"></textarea>
+          <textarea id="summernote" name="contents" class="form-control" form="writeForm" style="resize: none"></textarea>
           <div class="d-flex justify-content-end section__write__button_box">
             <button type="submit" class="btn section__write__button">Write</button>
             <a href="/board/freeboard" class="btn section__write__button list">Cancel</a>
