implement post modifying

--- a/views/pages/board/detail.ejs
+++ b/views/pages/board/detail.ejs
@@ -30,8 +30,8 @@
               <button class="btn section__detail__button delete" type="button">Delete</button>
             </div>
             <div class="section__detail__box-right">
-              <a class="btn section__detail__button modify" href="/board/freeboard/detail/modify">Modify</a>
-              <a class="btn section__detail__button cancel ml-3" href="/board/freeboard">Cancel</a>
+              <a class="btn section__detail__button modify" href="/board/freeboard/modify/<%= boardDetail.id %>">Modify</a>
+              <a class="btn section__detail__button list ml-3" href="/board/freeboard">List</a>
             </div>
           </div>
           <% } else { %>
