--- a/views/pages/board/modify.ejs
+++ b/views/pages/board/modify.ejs
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <%- include(`${process.cwd()}/views/common/base/head.ejs`, {path: 'pages/board/modify', title: 'Write'})%>
+  <%- include(`${process.cwd()}/views/common/base/head.ejs`, {path: 'pages/board/modify', title: 'Modify'})%>
 </head>
 <body>
   <%- include(`${process.cwd()}/views/common/components/partial/header.ejs`) %>
   <div class="container-fluid">
-    <h1 class="write__title">Free Board</h1>
-    <div class="section__write">
+    <h1 class="modifiy__title">Free Board</h1>
+    <div class="section__modify">
       <div class="wrap">
-        <form class="section__write__form" id="writeForm">
-          <input type="text" class="form-control section__write__title" placeholder="Title">
-          <textarea id="summernote" name="contents" class="form-control" form="writeForm"></textarea>
-          <div class="d-flex justify-content-end section__write__button_box">
-            <button type="submit" class="btn section__write__button">Write</button>
-            <a href="/board/freeboard" class="btn section__write__button list">Cancel</a>
+        <form class="section__modify__form" id="writeForm">
+          <input type="text" class="form-control section__modify__title" placeholder="Title" value="<%= boardDetail.title %>">
+          <textarea id="summernote" name="contents" class="form-control" form="writeForm"><%- boardDetail.contents %></textarea>
+          <div class="d-flex justify-content-end section__modify__button_box">
+            <button type="submit" class="btn section__modify__button">Write</button>
+            <a href="/board/freeboard" class="btn section__modify__button list">Cancel</a>
           </div>
         </form>
       </div>
