--- a/views/pages/auth/signup.ejs
+++ b/views/pages/auth/signup.ejs
@@ -14,12 +14,8 @@
         <div class="col-4">
           <div class="form-group">
             <label for="email" class="signup__form__label strong">Your Email</label>
-            <input type="email" class="form-control signup__form__input" id="email" name="email" aria-describedby="emailHelp" value="my1@mail.com" required>
+            <input type="email" class="form-control signup__form__input" id="email" name="email" aria-describedby="emailHelp" required>
           </div>
-          <!-- <div class="form-group">
-            <label for="verifiedNumver" class="signup__form__label strong">Verified Number</label>
-            <input type="text" class="form-control signup__form__input" id="verifiedNumver" aria-describedby="verifiedNumver">
-          </div> -->
           <div class="form-group">
             <label for="password" class="signup__form__label strong">Password</label>
             <input type="password" class="form-control signup__form__input" id="password" name="password" required>
@@ -28,9 +24,12 @@
             <label for="checkPassword" class="signup__form__label strong">Confirm Password</label>
             <input type="password" class="form-control signup__form__input" id="checkPassword" required>
           </div>
+          <div class="alert alert-danger signup__form__alert hide" role="alert">
+            Tips
+          </div>
           <div class="form-group">
             <label for="verifiedNumver" class="signup__form__label strong">Name</label>
-            <input type="text" class="form-control signup__form__input" id="username" value="It" name="username" aria-describedby="username">
+            <input type="text" class="form-control signup__form__input" id="username" name="username" aria-describedby="username">
           </div>
           <div class="form-group">
             <label for="phoneNumber" class="signup__form__label strong">Phone Number</label>
