--- a/public/src/assets/scss/index.scss
+++ b/public/src/assets/scss/index.scss
@@ -83,8 +83,13 @@
 .section__event {
   position: relative;
   width: 100%;
-  height: 300px;
+  height: 400px;
   margin: 80px 0 100px;
-  border: 1px solid red;
   box-sizing: border-box;
+  background: { 
+    image: url('/dist/assets/images/main/event_01.jpg');
+    size: cover;
+    position: center;
+    repeat: no-repeat;
+  }
 }
