--- a/views/pages/auth/signup.ejs
+++ b/views/pages/auth/signup.ejs
@@ -24,8 +24,8 @@
             <label for="checkPassword" class="signup__form__label strong">Confirm Password</label>
             <input type="password" class="form-control signup__form__input" id="checkPassword" required>
           </div>
-          <div class="alert alert-danger signup__form__alert hide" role="alert">
-            Tips
+          <div class="alert alert-danger signup__form__alert" role="alert">
+            영문, 숫자 조합으로 8자~16자 이상으로 설정할 수 있습니다.
           </div>
           <div class="form-group">
             <label for="verifiedNumver" class="signup__form__label strong">Name</label>
