--- a/views/pages/category/musical_list.ejs
+++ b/views/pages/category/musical_list.ejs
@@ -15,12 +15,7 @@
           </div>
           <div class="swiper-slide">
             <a href="" class="link-blcok">
-              <img src="/dist/assets/images/main/slide_02.jpg" alt="">
-            </a>
-          </div>
-          <div class="swiper-slide">
-            <a href="" class="link-blcok">
-              <img src="/dist/assets/images/main/slide_01.jpg" alt="">
+              <img src="/dist/assets/images/main/musical/banner_02.png" alt="">
             </a>
           </div>
         </div>
@@ -71,26 +66,17 @@
       <div class="wrap">
         <div class="section__title_box">
           <span class="line"></span>
-          <h3 class="section__title strong">Top Rated Musical</h3>
+          <h3 class="section__title strong">Recommend Musical</h3>
         </div>
         <div class="swiper-container-part recommend">
           <div class="swiper-wrapper">
-            <div class="swiper-slide">
-              <a href="/movie/detail" class="link-blcok">
-                <img src="/dist/assets/images/main/slide_01.jpg" alt="">
-              </a>
-            </div>
-            <div class="swiper-slide">
-              <a href="/movie/detail" class="link-blcok">
-                <img src="/dist/assets/images/main/slide_02.jpg" alt="">
-              </a>
-            </div>
-            <div class="swiper-slide">
-              <a href="/movie/detail" class="link-blcok">
-                <img src="/dist/assets/images/main/slide_01.jpg" alt="">
-              </a>
-            </div>
-          </div>
+            <% recommendList.map( list => { %>
+              <div class="swiper-slide">
+                <a href="/musical/detail/<%= list.mt20id._text %>" class="link-block">
+                  <img src="<%= list.poster._text%>" alt="<%= list.prfnm._text%>">
+                </a>
+              </div>
+            <% })%>
           <!-- If we need navigation buttons -->
             <div class="section__slide-part__button-prev">
               <i class="material-icons">
