--- a/views/common/components/partial/header.ejs
+++ b/views/common/components/partial/header.ejs
@@ -25,7 +25,7 @@
         
         <% } else { %>
       <li class="nav-item">
-        <a class="nav-link ft-white header__link strong" href="/users/mypage">My page</a>
+        <a class="nav-link ft-white header__link strong" href="/users/mypage/1">My page</a>
       </li>
       <li class="nav-item">
         <a class="nav-link ft-white header__link strong" href="/auth/signout">Sign out</a>
