--- a/views/common/components/partial/footer.ejs
+++ b/views/common/components/partial/footer.ejs
@@ -15,7 +15,7 @@
             <a href="/views/about" class="ft-white strong">About us</a>
           </li>
           <li class="list-inline-item footer__list__item">
-            <a href="/board/freeboard" class="ft-white strong">Free Board</a>
+            <a href="/board/freeboard/list/1" class="ft-white strong">Free Board</a>
           </li>
           <li class="list-inline-item footer__list__item">
             <a href="/views/faq" class="ft-white strong">FAQ</a>
