--- a/views/pages/board/modify.ejs
+++ b/views/pages/board/modify.ejs
@@ -14,7 +14,7 @@
           <textarea id="summernote" name="contents" class="form-control" form="writeForm"><%- boardDetail.contents %></textarea>
           <div class="d-flex justify-content-end section__modify__button_box">
             <button type="submit" class="btn section__modify__button">Write</button>
-            <a href="/board/freeboard" class="btn section__modify__button list">Cancel</a>
+            <a href="<%= locals.prevUrl %>" class="btn section__modify__button list">Cancel</a>
           </div>
         </form>
       </div>
