--- a/views/pages/board/write.ejs
+++ b/views/pages/board/write.ejs
@@ -14,7 +14,7 @@
           <textarea id="summernote" name="contents" class="form-control" form="writeForm" style="resize: none"></textarea>
           <div class="d-flex justify-content-end section__write__button_box">
             <button type="submit" class="btn section__write__button">Write</button>
-            <a href="/board/freeboard" class="btn section__write__button list">Cancel</a>
+            <a href="<%= locals.prevUrl %>" class="btn section__write__button list">Cancel</a>
           </div>
         </form>
       </div>
