--- a/views/common/components/partial/aside.ejs
+++ b/views/common/components/partial/aside.ejs
@@ -2,7 +2,7 @@
   <h3 class="aside__menu__title strong">My Page</h3>
   <ul class="aside__menu__list">
     <li class="aside__menu__item">
-      <a href="/users/mypage" class="link-block" data-location="dashboard">Dashboard</a>
+      <a href="/users/mypage/1" class="link-block" data-location="dashboard">Dashboard</a>
     </li>
     <li class="aside__menu__item">
       <a href="/users/change_profile" class="link-block" data-location="changeInfo">Change your info</a>
