--- a/public/src/assets/scss/common/base_list/_com.scss
+++ b/public/src/assets/scss/common/base_list/_com.scss
@@ -67,3 +67,27 @@ body{
   display: block;
 }
 
+// Bootstrap
+.container-fluid{
+  position: relative;
+  padding: {
+    left: 0;
+    right: 0;
+  };
+  margin: {
+    left: 0;
+    right: 0;
+  }
+}
+.row{
+  margin: {
+    left: 0;
+    right: 0;
+  };
+}
+.form-row{
+  margin: {
+    left: 0;
+    right: 0;
+  };
+}
