--- a/public/src/assets/scss/common/base_list/_mixins.scss
+++ b/public/src/assets/scss/common/base_list/_mixins.scss
@@ -84,7 +84,12 @@
   }
 
   &.disabled {
-    color: $pointColor_yellow_dark
+    color: $light_dark_gray;
+    cursor: not-allowed;
+    &:hover{
+      color:$light_dark_gray;
+      cursor: not-allowed;
+    }
   }
 
   &:hover {
