implement user withdrawal

--- a/views/pages/mypage/change_profile.ejs
+++ b/views/pages/mypage/change_profile.ejs
@@ -37,6 +37,7 @@
       </div>
       <div class="d-flex justify-content-center profile__button_box">
         <button type="submit" class="btn profile__button-join ">Change</button>
+        <a class="btn profile__button-cancel withdrawal">Withdrawal</a>
         <a href="/" class="btn profile__button-cancel ">Cancel</a>
       </div>
     </form>
