fix a minor part

--- a/public/src/assets/scss/common/base_list/_mixins.scss
+++ b/public/src/assets/scss/common/base_list/_mixins.scss
@@ -101,6 +101,6 @@
 @mixin pageBigTitle {
   font-size: $ft_pgTitle;
   font-weight: bold;
-  margin: 150px 0 50px;
+  padding: 150px 0 50px;
   text-align: center;
 }
