--- a/views/pages/auth/signup.ejs
+++ b/views/pages/auth/signup.ejs
@@ -16,7 +16,7 @@
             <label for="email" class="signup__form__label strong">Your Email</label>
             <input type="email" class="form-control signup__form__input" id="email" name="email" aria-describedby="emailHelp" required>
           </div>
-          <div class="form-group">
+          <div class="form-group" data-toggle="tooltip" data-placement="right" title="테스트용 비밀번호를 입력하시는 것을 권해드립니다.">
             <label for="password" class="signup__form__label strong">Password</label>
             <input type="password" class="form-control signup__form__input" id="password" name="password" required>
           </div>
@@ -25,7 +25,7 @@
             <input type="password" class="form-control signup__form__input" id="checkPassword" required>
           </div>
           <div class="alert alert-danger signup__form__alert" role="alert">
-            영문, 숫자 조합으로 8자~16자 이상으로 설정할 수 있습니다.
+            영문, 숫자 조합으로 4자~16자 이상으로 설정할 수 있습니다.
           </div>
           <div class="form-group">
             <label for="verifiedNumver" class="signup__form__label strong">Name</label>
