update some style

--- a/public/src/assets/scss/common/base_list/_com.scss
+++ b/public/src/assets/scss/common/base_list/_com.scss
@@ -79,13 +79,7 @@ body{
     right: 0;
   }
 }
-.row{
-  margin: {
-    left: 0;
-    right: 0;
-  };
-}
-.form-row{
+.row, .form-row, .card-deck{
   margin: {
     left: 0;
     right: 0;
