--- a/views/common/components/partial/footer.ejs
+++ b/views/common/components/partial/footer.ejs
@@ -21,7 +21,7 @@
             <a href="/views/faq" class="ft-white strong">FAQ</a>
           </li>
           <li class="list-inline-item footer__list__item">
-            <a href="" class="ft-white strong">Contact</a>
+            <a href="/views/contact" class="ft-white strong">Contact</a>
           </li>
         </ul>
 
