add footerBottom function

--- a/views/pages/board/modify.ejs
+++ b/views/pages/board/modify.ejs
@@ -20,7 +20,7 @@
       </div>
     </div>
   </div>
-  <div class="footer__bottom">
+  <div class="footer__parent">
     <%- include(`${process.cwd()}/views/common/components/partial/footer.ejs`) %>
   </div>
   <%- include(`${process.cwd()}/views/common/base/foot.ejs`, {path: 'pages/board/modify' })%>
