--- a/views/pages/board/detail.ejs
+++ b/views/pages/board/detail.ejs
@@ -47,7 +47,7 @@
       </div>
     </div>
   </div>
-  <div class="footer__bottom">
+  <div class="footer__parent">
     <%- include(`${process.cwd()}/views/common/components/partial/footer.ejs`) %>
   </div>
   <%- include(`${process.cwd()}/views/common/base/foot.ejs`, {path: 'pages/board/detail'} )%>
