--- a/views/pages/view_pages/contact.ejs
+++ b/views/pages/view_pages/contact.ejs
@@ -16,7 +16,7 @@
       </div>
     </div>
   </div>
-  <div class="footer__bottom">
+  <div class="footer__parent">
     <%- include(`${process.cwd()}/views/common/components/partial/footer.ejs`) %>
   </div>
   <%- include(`${process.cwd()}/views/common/base/foot.ejs`, {path: 'pages/view_pages/contact' })%>
