--- a/views/pages/auth/signup.ejs
+++ b/views/pages/auth/signup.ejs
@@ -31,6 +31,9 @@
             <label for="verifiedNumver" class="signup__form__label strong">Name</label>
             <input type="text" class="form-control signup__form__input" id="username" name="username" aria-describedby="username">
           </div>
+          <div class="alert alert-danger signup__form__alert" role="alert">
+            한글, 영어 대소문자로 사용해주세요.
+          </div>
           <div class="form-group">
             <label for="phoneNumber" class="signup__form__label strong">Phone Number</label>
             <input type="text" class="form-control signup__form__input" id="phoneNumber" name="phone" aria-describedby="phoneNumber">
